--- a/src/app/shared/sharing-modal/sharing-modal.component.html
+++ b/src/app/shared/sharing-modal/sharing-modal.component.html
@@ -1,7 +1,8 @@
 
   <span class="r mt15 absolute tc pill">
     <a class="m10 db share" style="color:black">
-      <i class="fas fa-share-alt" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'" href="#"></i>
+      <img src="assets/img/share.png" style="margin-top:3px" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'">
+      <!-- <i class="fas fa-share-alt" *ngIf="ShareState == 'min'" (click)="ShareState = 'max'" href="#"></i> -->
       <!-- <i class="fas fa-share-alt" data-toggle="modal" data-target="#share" href="#"></i> -->
     </a>
     <div>
