--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -103,6 +103,42 @@ margin-right: 2px;
     padding: 15px 35px; 
 }
 
+.actionbutton a{
+    color:white;
+    text-decoration: none;
+    min-width: 310px;
+    display: inline-block;
+}
+
+.cardbutton{
+    background-color: #3ba4db; 
+    text-align: center;
+    border-radius: 50px 50px 50px 50px; 
+    /* margin-left: 28%; */
+    padding: 15px 25px; 
+}
+
+.cardbutton a{
+    color:white;
+    text-decoration: none;
+    min-width: 150px;
+    display: inline-block;
+    margin: 7px 0px;
+}
+
+.cardlink{ 
+    text-align:center;
+    padding: 25px 25px;
+    width: 100%;
+    display: inherit;
+    /* color:#3ba4db;
+    float: left; */
+}
+
+.cardlink a{
+    color:#3ba4db;    
+}
+
 .headerheight{ 
     line-height: 30px;
     padding-top: 30px;
@@ -113,13 +149,11 @@ margin-right: 2px;
     max-width: 540px;
 }
 
-
-.actionbutton a{
-    color:white;
-    text-decoration: none;
-    min-width: 310px;
-    display: inline-block;
+.form-control{
+    border: 1px solid #3ba4db !important;
 }
+
+
 
 .actionbutton a:hover{
     color:#3ba4db;
