--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -80,15 +80,22 @@
 
           <div *ngIf="paras?.length > 0" [ngClass]="{'tc' : FirstPage || LastPage}">
             <p class="mx144" dir={{pageGetparameters.dir}} *ngFor="let item of paras; let i= index">
-              <span class="ng-binding ng-scope" dir={{pageGetparameters.dir}} *ngIf="item.type== 'text'">
-                <b>{{item.text}} </b>
+
+              <span *ngIf="item.type== 'text' && isArray(item.text)==true">
+                <span class="ng-binding" dir={{pageGetparameters.dir}} *ngFor="let line of item.text">
+                  {{line}} <br/>
+                </span>
               </span>
-              <span class="ng-binding ng-scope" *ngIf="item.image!= ''">
+              <span class="ng-binding" dir={{pageGetparameters.dir}} *ngIf="item.type== 'text' && isArray(item.text)==false">
+                {{item.text}}
+              </span>
+
+              <span class="ng-binding image" *ngIf="item.type == 'image'">
                 <img class="imgwidth" *ngIf="item.image!=undefined && item.image!=''" [src]="item.image" height="auto">
               </span>
+
               <span class="actionbutton" dir={{pageGetparameters.dir}} *ngIf="item.type=='button'">
                 <a href="">{{item.text}}</a>
-
               </span>
             </p>
           </div>
