--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -130,7 +130,7 @@
                 <tr style="overflow:hidden">
                   <!-- comparison table -->
                   <td *ngFor="let cardtab of card.tabs;let j= index" class="cardtabs">
-                    <h4 class="mx144 ng-scope" dir={{pageGetparameters.dir}}>{{cardtab.heading}}</h4>
+                    <!-- <h4 class="mx144 ng-scope" dir={{pageGetparameters.dir}}>{{cardtab.heading}}</h4> -->
                     <p class="mx144 ng-scope" dir={{pageGetparameters.dir}} *ngFor="let para of cardtab.paras">{{para}}</p>
                     <img *ngFor="let image1 of cardtab.localImage" [src]="image1" height="auto" style="margin-left: 12%;width:200px">
                     <p class="mx144 ng-scope" dir={{pageGetparameters.dir}} *ngFor="let text of cardtab.texts">{{text}}</p>
