--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,11 @@
     </span>
     <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 25%;">
       <i class="fas fa-book"></i>{{selectedLookup.bookname}}
-      <i class="fas fa-chevron-up flip" (click)="expandBookDropdown()"></i>
+      <i class="fas fa-chevron-up flip" (click)="expandBookDropdown(null)"></i>
     </span>
     <span class="l p25 absolute kg-gray-dark ng-binding" style="margin-left: 75%;">
       <i class="fas fa-language"></i> {{selectedLookup.language}}
-      <i class="fas fa-chevron-up flip" (click)="expandLanguageDropdown()"></i>
+      <i class="fas fa-chevron-up flip" (click)="expandLanguageDropdown(null)"></i>
     </span>
     <div class="dib progress pill my25 kg-bg-gray-light">
       <div class="kg-bg-gray pill"> </div>
