--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- <app-header></app-header> -->
 <!-- <div class="row .bg-light"> -->
   <div class="col-md-12">
-  <div class="col-md-6" *ngFor="let banner of Images">
+  <div class="col-md-6" *ngFor="let banner of images">
     <div class="thumbnail" >
     
       <!-- <img [src]="banner.imageurl"> -->
