--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -83,7 +83,8 @@
 
               <span *ngIf="item.type== 'text' && isArray(item.text)==true">
                 <span class="ng-binding" dir={{pageGetparameters.dir}} *ngFor="let line of item.text">
-                  {{line}} <br/>
+                  {{line}}
+                  <br/>
                 </span>
               </span>
               <span class="ng-binding" dir={{pageGetparameters.dir}} *ngIf="item.type== 'text' && isArray(item.text)==false">
@@ -121,8 +122,13 @@
                   <a (click)="formAction(card.link[i][1])">{{card.link[i][0]}}</a>
                 </span>
 
-
-                <img class="imgwidth" *ngIf="card.image!=undefined && card.image[i]!=''" [src]="card.image[i]" height="auto">
+                
+                  <!-- <img class="imgwidth" *ngIf="card.image!=undefined && card.image[i]!=''" [src]="card.image[i]" height="auto"> -->
+                
+                <p class="mx144" *ngFor="let cardimage of card.image">                  
+                  <img  class="imgwidth" *ngIf="cardimage!=undefined && cardimage.image!='' && cardimage.image!=null" [src]="cardimage.image"
+                    height="auto">
+                </p>
 
               </div>
 
