--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -1,7 +1,90 @@
+/***** Global *****/
 html{
     background-color: white !important;
 }
 
+
+/***** Bootstrap-ish *****/
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.col-4, .col-8 {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col-4 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 33.33333%;
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
+}
+
+.col-8 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 66.66667%;
+    flex: 0 0 66.66667%;
+    max-width: 66.66667%;
+}
+
+
+/***** Language Selector *****/
+.language-selector-toggle {
+    line-height: 36px;
+    padding: 12px 24px;
+    cursor: pointer;
+}
+
+.language-selector-toggle .fas{
+    margin-left: 5px;
+}
+
+
+/***** Tool Navigation *****/
+.tool-navigation .buttons {
+    width: calc(50% - 2px);
+}
+
+
+/***** Footer *****/
+footer {
+    text-align: left;
+    padding: 12px 0;
+    width: 100%;
+    max-width: 568px;
+    margin: 0 auto;
+    border-top: var(--kg-gray-light) 2px solid;
+    font-size: 11px;
+}
+
+/*footer > div {
+    padding-left: 0;
+    padding-right: 0;
+}*/
+
+footer img {
+    height: 45px;
+    display: inline-block;
+    margin-right: 12px;
+    vertical-align: bottom;
+}
+
+footer span {
+    display: inline-block;
+    line-height: 20px;
+    margin-top: 25px;
+}
+
+
+/***** Other *****/
 .mr25{
     margin-right:25px;
     margin-bottom: 40px;
@@ -170,42 +253,4 @@ margin-right: 2px;
 
 p{
     line-height: 28px;
-}
-
-
-/***** CRU ADDITIONS *****/
-.language-selector-toggle {
-    line-height: 36px;
-    padding: 12px 24px;
-    cursor: pointer;
-}
-
-.language-selector-toggle .fas{
-    margin-left: 5px;
-}
-
-.progress-buttons .buttons {
-    width: calc(50% - 2px);
-}
-
-.footer-wrapper {
-    margin-left: 100px;
-    margin-right: 100px;
-}
-
-.footer-wrapper > div > div {
-    padding: 12px 0;
-}
-
-.footer-wrapper img {
-    height: 45px;
-    display: inline-block;
-    margin-right: 12px;
-    vertical-align: bottom;
-}
-
-.footer-wrapper span {
-    display: inline-block;
-    line-height: 20px;
-    margin-top: 25px;
 }
