--- a/src/app/page/page.component.css
+++ b/src/app/page/page.component.css
@@ -5,6 +5,10 @@ html{
 
 
 /***** Bootstrap-ish *****/
+.container {
+    max-width: 100%;
+}
+
 .row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -36,6 +40,13 @@ html{
 }
 
 
+/***** Header *****/
+/*header {
+    height: 60px;
+    border-bottom: 1px var(--kg-gray-light) solid;
+}*/
+
+
 /***** Language Selector *****/
 .language-selector-toggle {
     line-height: 36px;
@@ -49,8 +60,35 @@ html{
 
 
 /***** Tool Navigation *****/
+.tool-navigation {
+    margin-top: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
 .tool-navigation .buttons {
     width: calc(50% - 2px);
+}
+
+
+/***** Alerts *****/
+.alertJumbotron {
+    margin-top: 20%;
+    margin-bottom: 30px;
+    padding: 30px 15px;
+    color: inherit;
+    background-color: #eeeeee;
+    border-radius: 3px;
+}
+
+.alertJumbotron h2 {
+    margin-bottom: 0;
+}
+
+@media screen and (min-width: 550px) {
+    .alertJumbotron {
+        padding: 48px 60px;
+    }
 }
 
 
@@ -58,17 +96,11 @@ html{
 footer {
     text-align: left;
     padding: 12px 0;
-    width: 100%;
-    max-width: 568px;
-    margin: 0 auto;
+    margin-left: 100px;
+    margin-right: 100px;
     border-top: var(--kg-gray-light) 2px solid;
     font-size: 11px;
 }
-
-/*footer > div {
-    padding-left: 0;
-    padding-right: 0;
-}*/
 
 footer img {
     height: 45px;
@@ -128,18 +160,9 @@ footer span {
     font-size: 24px;
 }
 
-.page{
-    width: 768px;
-    /* position: relative; */
-    margin: 0 auto;
-    /* left: 20%; */
-    /* transform: translate(-50%, 0); */
-    
-}
-
 .outerbox{
-    align-content: center;
-    align-items: center;
+    width: 768px;
+    margin: 0 auto;
      
 }
 
@@ -251,6 +274,12 @@ margin-right: 2px;
     background-color: #7fbfe0;    
 }
 
-p{
+p {
     line-height: 28px;
+}
+
+.mx100 .image {
+    display: block;
+    margin-left: -100px;
+    margin-right: -100px;
 }
