Fixing empty space above heading

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -21,7 +21,7 @@
 
     <!-- First Page Header -->
     <div class="tc headerheight" *ngIf="FirstPage && currentPageContent">
-      <h2 class="mx100 tc ng-binding" dir={{pageGetparameters.dir}}>{{currentPageContent?.heading}}</h2>
+      <h2 class="mx100 tc firstHeading ng-binding" dir={{pageGetparameters.dir}}>{{currentPageContent?.heading}}</h2>
     </div>
 
     <!-- Additional Pages Header -->
